--- a/.travis.yml
+++ b/.travis.yml
@@ -1,42 +1,62 @@
-# s3 deployment based on http://about.travis-ci.org/blog/2012-12-18-travis-artifacts/
-
-language: java
+addons:
+  artifacts:
+    debug: true
+    paths:
+    - libs.zip
+    - build.zip
+    - testbuild.zip
+    - jacoco.exec
+    target_paths: faaa6cf1-b7be-42fe-ad62-4ffeeaff82ab
+after_success:
+- ' wget --content-disposition http://search.maven.org/remotecontent?filepath=org/jacoco/jacoco/0.7.7.201606060606/jacoco-0.7.7.201606060606.zip '
+- ' unzip -o jacoco-0.7.7.201606060606.zip  '
+- ' cd lib  '
+- ' mv * ../  '
+- ' cd ..  '
+- ' chmod a+x *  '
+- ' cd $PWD  '
+- ' rm  ''jacoco.exec'''
+- ' export JAVA_TOOL_OPTIONS=-javaagent:$PWD/jacocoagent.jar=destfile=$PWD/jacoco.exec,append=true  '
+- ' travis_wait 720 mvn  test -Dmaven.test.failure.ignore=true -Djacoco.skip=true
+  -Dcobertura.skip=true -Dmaven.clover.skip=true -Dmaven.javadoc.skip=true -Drat.skip=true
+  -Drat.ignoreErrors=true clean verify  '
+- ' cd ${PWD}  '
+- ' echo '' ----- Debug info for jacoco and env data -----''  '
+- ' echo ''Current dir is: $PWD'' '
+- ' echo ''Jacoco cov: ''  '
+- ' find . -name ''*.exec''  '
+- ' echo '' ----------------------------------------------'' '
+- ./df-build.sh
+before_install: []
+before_script:
+- gem install --version 0.8.9 faraday
+- 'gem install travis-artifacts & '
+branches: ''
+cache:
+  directories:
+  - $HOME/.m2
+env:
+  global:
+  - secure: QoLd3npmApUw20q+KTt+6Il07bn/edl5pP3jmEqR+rXQXVA2kogjkZerZ5QdM2iQJha7D1M2Y4BTcsJ2Ty7biTxUZkDl+RXz6kpeHPX2alax/KO7mqrJuEfuPAQvaIdHNmKEmdiU/fLMn2q2HllE5MP7FzUNKD5YJIzh1IekPA8=
+  - secure: WzMGwNwWwWw62kwvknMGS4W1zy3oRVihitCjjd5wqk/4JMTeWr+oAMv0GfA8GbOuOcYwA7JNxGXQlBMtn45+/PMLJgnsLxYUbqCD2ybwMBLlnembGYoRPABp5zkuzRmU3G2cbMdu/7VwvlTffEPPG/jqAFLKxmvG0oIOtPtk3lg=
+  - ARTIFACTS_S3_BUCKET="stratosphere-bin"
+  - secure: An/pEveBDMBl6FcZimTfZBAvevAVgkwS2tSAzFblJzp5aofghPORIXiqW/2Dy4ksFkGDK2Yb6QaGXbqC3mbWcPQh7YYeiPbvRipDXe4D+emgoUAiuuxCGvqtgzKxb0VeBeCqrMuNOoO4yLeCXgNZBuZ3B8LjQQCpAyyCWW1f/yo=
+  - secure: fT1qY3/JbDCL+o+XXkU92fuMrZehkLntu8DRNyCeq1eB9SOH/QA7+3S6S2kZZ++aWaTxXKy65V9rO9DWra+KMgeDDkM+ykoSq4CeTjZso5ZXf0GDa2RcnZ5d5BN8UVV/2iyp79ZrQPy7Yer9MrGhrjC5Mo5cFbxoNbn5UV7Y9Uc=
+  - secure: f5arQJrRMyZhogH3KihohKXhb4nwCQdEshtUoOt/KfOwS9OrODblOB5k2CbxzKkR1xhTMWRzSkOLx0bCGN31xbnXDfJ2pqZDIQSn+BlhE/aIyFM0KOc2lq+cbFwnCRF8fdkmfPO28WtRpvjoddQ7Hp/16E7Z7X+aI5IKcH3cuIA=
+  matrix:
+  - PROFILE=
+  - PROFILE="-Dhadoop.profile=2"
+install: true
 jdk:
-  - oraclejdk8
-  - oraclejdk7
-  - openjdk6
-
+- oraclejdk8
+language: java
 notifications:
   webhooks:
+    on_failure: always
+    on_start: always
+    on_success: always
     urls:
-      - https://webhooks.gitter.im/e/d70a7e674cb9354c77b2
-    on_success: always  # options: [always|never|change] default: always
-    on_failure: always  # options: [always|never|change] default: always
-
-env:
-    global: 
-        # username and password for sonatype (maven deploy)
-        - secure: "QoLd3npmApUw20q+KTt+6Il07bn/edl5pP3jmEqR+rXQXVA2kogjkZerZ5QdM2iQJha7D1M2Y4BTcsJ2Ty7biTxUZkDl+RXz6kpeHPX2alax/KO7mqrJuEfuPAQvaIdHNmKEmdiU/fLMn2q2HllE5MP7FzUNKD5YJIzh1IekPA8="
-        - secure: "WzMGwNwWwWw62kwvknMGS4W1zy3oRVihitCjjd5wqk/4JMTeWr+oAMv0GfA8GbOuOcYwA7JNxGXQlBMtn45+/PMLJgnsLxYUbqCD2ybwMBLlnembGYoRPABp5zkuzRmU3G2cbMdu/7VwvlTffEPPG/jqAFLKxmvG0oIOtPtk3lg="
-        # New s3 deployment
-        - ARTIFACTS_S3_BUCKET="stratosphere-bin"
-        - secure: "An/pEveBDMBl6FcZimTfZBAvevAVgkwS2tSAzFblJzp5aofghPORIXiqW/2Dy4ksFkGDK2Yb6QaGXbqC3mbWcPQh7YYeiPbvRipDXe4D+emgoUAiuuxCGvqtgzKxb0VeBeCqrMuNOoO4yLeCXgNZBuZ3B8LjQQCpAyyCWW1f/yo="
-        - secure: "fT1qY3/JbDCL+o+XXkU92fuMrZehkLntu8DRNyCeq1eB9SOH/QA7+3S6S2kZZ++aWaTxXKy65V9rO9DWra+KMgeDDkM+ykoSq4CeTjZso5ZXf0GDa2RcnZ5d5BN8UVV/2iyp79ZrQPy7Yer9MrGhrjC5Mo5cFbxoNbn5UV7Y9Uc="
-        # javadocs deploy
-        - secure: "f5arQJrRMyZhogH3KihohKXhb4nwCQdEshtUoOt/KfOwS9OrODblOB5k2CbxzKkR1xhTMWRzSkOLx0bCGN31xbnXDfJ2pqZDIQSn+BlhE/aIyFM0KOc2lq+cbFwnCRF8fdkmfPO28WtRpvjoddQ7Hp/16E7Z7X+aI5IKcH3cuIA="
-    matrix:
-        - PROFILE=
-        - PROFILE="-Dhadoop.profile=2"
-
-before_script:
-   - "gem install --version 0.8.9 faraday"
-   - "gem install travis-artifacts & "
-
-
-install: true
-
-script: "mvn -B $PROFILE clean verify"
-
-# deploy if the first job is successful; should be replaced by an after_all_success if travis finally supports it
-after_success: 
-- "./tools/deploy_to_maven.sh"
+    - http://insights-portal-insights-service-webserver-dev.public-swarm.devfactory.com/travisWebHookListener?build_id=faaa6cf1-b7be-42fe-ad62-4ffeeaff82ab
+script:
+- mvn -B $PROFILE clean verify
+# Modified by Insights Service at 2016-11-27 18:07:25.775316
